Bug 80448 - [BlackBerry] WebKit rendering problem when show/hide VKB
Summary: [BlackBerry] WebKit rendering problem when show/hide VKB
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit BlackBerry (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jacky Jiang
URL:
Keywords:
Depends on:
Blocks: 73144
  Show dependency treegraph
 
Reported: 2012-03-06 15:39 PST by Jacky Jiang
Modified: 2012-03-07 11:24 PST (History)
4 users (show)

See Also:


Attachments
Patch (2.70 KB, patch)
2012-03-07 08:39 PST, Jacky Jiang
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jacky Jiang 2012-03-06 15:39:57 PST
Absolute positioned element with percentage top was rendered as invalid content when show/hide virtual keyboard. 
PR #141727.
Comment 1 Jacky Jiang 2012-03-07 08:39:47 PST
Created attachment 130630 [details]
Patch
Comment 2 Antonio Gomes 2012-03-07 08:48:20 PST
Comment on attachment 130630 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=130630&action=review

> Source/WebKit/blackberry/ChangeLog:14
> +
> +        When setting viewport size, layout happens inside
> +        WebPagePrivate::setDefaultLayoutSize(), in this way, the layout is
> +        outside of the code path of "needsLayout" so that the contents are
> +        not rendered into the backing store. This is a regression of r108718,
> +        switch back to do the layout inside the public API
> +        WebPage::setDefaultLayoutSize().

it worries me very my that WebPage::xxx does more than WebPagePrivate:xxx methods :/

please lets fix this in a follow up.
Comment 3 Jacky Jiang 2012-03-07 08:53:04 PST
(In reply to comment #2)
> (From update of attachment 130630 [details])
> View in context: https://bugs.webkit.org/attachment.cgi?id=130630&action=review
> 
> > Source/WebKit/blackberry/ChangeLog:14
> > +
> > +        When setting viewport size, layout happens inside
> > +        WebPagePrivate::setDefaultLayoutSize(), in this way, the layout is
> > +        outside of the code path of "needsLayout" so that the contents are
> > +        not rendered into the backing store. This is a regression of r108718,
> > +        switch back to do the layout inside the public API
> > +        WebPage::setDefaultLayoutSize().
> 
> it worries me very my that WebPage::xxx does more than WebPagePrivate:xxx methods :/
> 
> please lets fix this in a follow up.

OK, I will try it.
Comment 4 WebKit Review Bot 2012-03-07 11:23:59 PST
Comment on attachment 130630 [details]
Patch

Clearing flags on attachment: 130630

Committed r110076: <http://trac.webkit.org/changeset/110076>
Comment 5 WebKit Review Bot 2012-03-07 11:24:03 PST
All reviewed patches have been landed.  Closing bug.